syntax = "proto3";

package tutorial;

option java_multiple_files = true;
option java_package = "core.inter.tdc.protogen.models";
option java_outer_classname = "AddressBookProtos";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
  PhoneNumber phone = 4;
}

enum PhoneType {
  NONE = 0;
  MOBILE = 1;
  HOME = 2;
  WORK = 3;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}

message AddressBook {
  repeated Person person = 1;
}

